--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,6 @@
     "keywords": ["october", "api"],
     "require": {
         "php": ">=7.0.0",
-        "league/oauth2-server": "4.1.*"
+        "league/oauth2-server": ">=4.1"
     }
 }
