--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["october", "api"],
     "require": {
         "php": ">=7.2.9",
-        "laravel/passport": "^9.0"
+        "laravel/passport": "9.3.2"
     },
     "require-dev": {
         "moontoast/math": "^1.1"
