--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -7,3 +7,5 @@
     - 2016_06_01_000003_create_oauth_refresh_tokens_table.php
     - 2016_06_01_000004_create_oauth_clients_table.php
     - 2016_06_01_000005_create_oauth_personal_access_clients_table.php
+3.0.0:
+    - Add compatibility to October CMS 3 and Laravel 9. 
